<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CtripOAuth</string>
    <string name="aufail">Failed</string>
    <string name="authok">Success</string>
    <string name="blink_detection">BLINK</string>
    <string name="facelost">Face Lost</string>
    <string name="idscan_app_name">去哪儿旅行</string>
    <string name="idscan_camera_framework_bug">获取相机权限失败，请在设置中打开。</string>
    <string name="idscan_passport_scan">证件扫描</string>
    <string name="idscan_sure">确定</string>
    <string name="liveness_detection_failed">活体检测失败</string>
    <string name="liveness_detection_failed_action_blend">活体检测动作错误</string>
    <string name="liveness_detection_failed_not_video">活体检测连续性检测失败</string>
    <string name="liveness_detection_failed_timeout">活体检测超时失败</string>
    <string name="loading_confirm">OK,I Know</string>
    <string name="loading_text">使用说明：\101、首先您需要输入姓名；\102、之后您需要按照屏幕上的提示完成3个动作，以通过活体检测，同时软件会将您的人脸图像发送至服务器进行人脸验证；\103、如果您没有通过活体检测或者人脸验证，则登陆失败，反之则登陆成功。</string>
    <string name="mouth_detection">MOUTH</string>
    <string name="netowrk_parse_failed">解析服务器数据失败</string>
    <string name="network_error">网络请求失败</string>
    <string name="novalidframe">没有合适的图像用于人脸识别</string>
    <string name="pos_detection">POS</string>
    <string name="pub_react_video_click_to_restart">Click to try again</string>
    <string name="pub_react_video_loading_faild">Video loading failed</string>
    <string name="pub_react_video_no_url">No url</string>
    <string name="pub_react_video_replay">Replay</string>
    <string name="pub_react_video_tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="pub_react_video_tips_not_wifi_cancel">Stop play</string>
    <string name="pub_react_video_tips_not_wifi_confirm">Resume</string>
    <string name="spider_3dtouch_flight">预订机票</string>
    <string name="spider_3dtouch_hotel">预订酒店</string>
    <string name="spider_3dtouch_order">我的订单</string>
    <string name="spider_3dtouch_search">搜索</string>
    <string name="spider_app_name">去哪儿旅行</string>
    <string name="splash_skip">跳过</string>
    <string name="splash_skip_seconds">跳过 %1$d</string>
    <string name="steps">活体检测:</string>
    <string name="timeout">超时</string>
    <string name="tipblink">Do blink with your eyes.</string>
    <string name="tippose">Rotate your pose vertically.</string>
    <string name="tipsmouth">Open your mouth and close.</string>
    <string name="verify_error">验证失败</string>
    <string name="verify_success">验证成功</string>
</resources>
