<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@android:color/black" android:descendantFocusability="blocksDescendants" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:id="@+id/surface_container" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <ImageView android:id="@+id/thumb" android:background="#000000" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitCenter" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:layout_alignParentStart="true"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/layout_bottom" android:background="@drawable/video_bottom_bg" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="50dp" android:layout_alignParentBottom="true">
        <TextView android:textColor="#ffffff" android:id="@+id/current" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14dp" android:text="00:00"/>
        <SeekBar android:layout_gravity="center_vertical" android:id="@+id/bottom_seek_progress" android:background="@null" android:paddingLeft="12dp" android:paddingTop="8dp" android:paddingRight="12dp" android:paddingBottom="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:maxHeight="1dp" android:max="100" android:progressDrawable="@drawable/video_bottom_seek_progress" android:minHeight="1dp" android:thumb="@drawable/video_bottom_seek_thumb" android:layout_weight="1"/>
        <TextView android:textColor="#ffffff" android:id="@+id/total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="00:00"/>
        <TextView android:textColor="#ffffff" android:id="@+id/clarity" android:paddingLeft="20dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="clarity" android:textAlignment="center"/>
        <ImageView android:id="@+id/fullscreen" android:paddingLeft="14dp" android:paddingRight="14dp" android:layout_width="52.5dp" android:layout_height="match_parent" android:src="@drawable/video_enlarge" android:scaleType="centerInside"/>
    </LinearLayout>
    <ProgressBar android:id="@+id/bottom_progress" android:layout_width="match_parent" android:layout_height="0dp" android:max="100" android:progressDrawable="@drawable/video_bottom_progress" android:layout_alignParentBottom="true" style="?android:attr/progressBarStyleHorizontal"/>
    <ImageView android:id="@+id/back_tiny" android:background="@drawable/video_click_back_tiny_selector" android:visibility="gone" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="6dp" android:layout_marginTop="6dp"/>
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/layout_top" android:background="@drawable/video_title_bg" android:layout_width="match_parent" android:layout_height="60dp" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <ImageView android:id="@+id/back" android:paddingLeft="12dp" android:layout_width="40dp" android:layout_height="match_parent" android:src="@drawable/close" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:paddingStart="12dp" android:layout_alignParentStart="true"/>
        <TextView android:textSize="18sp" android:textColor="#ffffff" android:ellipsize="end" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginRight="12dp" android:maxLines="2" android:layout_toLeftOf="@+id/battery_time_layout" android:layout_toRightOf="@+id/back" android:layout_centerVertical="true" android:layout_marginStart="12dp" android:layout_marginEnd="12dp" android:layout_toEndOf="@+id/back"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@+id/battery_time_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="14dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="14dp" android:layout_alignParentEnd="true">
            <ImageView android:layout_gravity="center_horizontal" android:id="@+id/battery_level" android:background="@drawable/video_battery_level_10" android:layout_width="23dp" android:layout_height="10dp"/>
            <TextView android:textSize="12sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@+id/video_current_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/mute_layout" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="14dp" android:layout_alignParentEnd="true">
            <RadioButton android:textSize="16dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/mute_rb" android:background="#0000" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="关闭声音" android:maxLines="1"/>
            <ImageView android:layout_gravity="center" android:id="@+id/mute_iv" android:background="@drawable/video_add_volume" android:layout_width="35dp" android:layout_height="18dp"/>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar android:id="@+id/loading" android:visibility="invisible" android:layout_width="@dimen/pub_react_video_start_button_w_h_normal" android:layout_height="@dimen/pub_react_video_start_button_w_h_normal" android:indeterminateDrawable="@drawable/video_loading" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
    <LinearLayout android:layout_gravity="center_vertical" android:id="@+id/start_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <ImageView android:id="@+id/start" android:layout_width="@dimen/pub_react_video_start_button_w_h_normal" android:layout_height="@dimen/pub_react_video_start_button_w_h_normal" android:src="@drawable/video_click_play_selector"/>
    </LinearLayout>
    <TextView android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/replay_text" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/pub_react_video_replay" android:layout_below="@+id/start_layout" android:layout_centerHorizontal="true"/>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/retry_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <TextView android:textSize="14sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pub_react_video_loading_faild"/>
        <TextView android:textSize="14sp" android:textColor="@android:color/white" android:id="@+id/retry_btn" android:background="@drawable/video_retry_bg" android:paddingLeft="9dp" android:paddingTop="4dp" android:paddingRight="9dp" android:paddingBottom="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/pub_react_video_click_to_restart"/>
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/no_wifi_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <TextView android:textSize="15sp" android:textColor="@android:color/white" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="您 正 在 处 于 非 WIFI 网 络 环 境"/>
        <TextView android:textSize="14sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="观 看 视 频 会 消 耗 流 量,  是 否 继 续 播 放"/>
        <TextView android:textSize="15sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/continue_btn" android:background="@drawable/video_retry_bg" android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingRight="20dp" android:paddingBottom="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="继续播放"/>
    </LinearLayout>
</RelativeLayout>
